# opentypeless

./: .gitignore  CHANGELOG.md  README.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_hi.md  README_id.md  README_it.md  README_ja.md  README_ko.md  README_nl.md  README_pl.md  README_pt.md  README_ru.md  README_th.md  README_tr.md  README_vi.md  README_zh.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  provider_request.yml
.github/scripts/: import-linux-gpg-key.sh  import-windows-certificate.ps1  upload-linux-verification-artifacts.sh
.github/workflows/: ci.yml  publish-v0.1.37-fork-release.yml  publish-v0.1.38-fork-release.yml  release.yml  staple-macos-release.yml
browser-agent/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
docs/: 2026-05-21-optimization-design.md  2026-05-22-i18n-plan.md  2026-06-20-appsumo-lifetime-cloud-client-spec.md  2026-06-27-typeless-competitive-roadmap-spec.md  2026-06-30-local-first-custom-scenes-spec.md  2026-07-06-openless-deep-dive-implementation-spec.md  2026-07-06-openless-followup-completion-spec.md  2026-07-06-openless-gap-analysis-spec.md  2026-07-07-ask-anything-floating-note-ux-spec.md  2026-07-08-gap-closure-implementation-spec.md  2026-07-08-openless-shandianshuo-typeless-gap-spec.md  2026-07-08-release-v1.1.48-notes.md  act-background-and-screenshot-design.md  act-cdp-browser.md  act-multiagent-design.md  act-roadmap.md  act-screen-aware-design.md  flowrad-act-architecture.md  flowrad-cowork-spec.md  gemini-computer-use-incorporation.md  release-signing.md
docs/superpowers/plans/: 2026-06-03-cloud-error-capsule-visibility.md  2026-07-14-readme-v1.1.49-multilingual-refresh.md
docs/superpowers/specs/: 2026-07-14-readme-v1.1.49-multilingual-refresh-design.md
flowrad-stt-api/: README.md  package-lock.json  package.json  railway.json  tsconfig.json
flowrad-stt-api/src/: engine.ts  index.ts  prompt.ts
flowrad-web/: package.json  railway.json  server.js
flowrad-web/public/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: credentials.rs  dev_relay.rs  diag.rs  error.rs  hotkey.rs  lib.rs  native_hotkey.rs  pipeline.rs  platform.rs  selection.rs  tray.rs
src-tauri/src/act/: action.rs  answer.rs  audit.rs  backend.rs  blackboard.rs  browser.rs  capability.rs  compose.rs  conductor.rs  destructive.rs  e2e_sim.rs  element.rs  events.rs  executor.rs  fastpath.rs  flow.rs  flow_registry.rs  flow_runner.rs  focus_guard.rs  grounding.rs  grounding_packet.rs  killswitch.rs  llm.rs  macos.rs  mock_backend.rs  mod.rs  plan_mode.rs  planner.rs  seed.rs  seeds.json  selection.rs  session.rs  shell_policy.rs  uia_broker.rs  windows.rs
src-tauri/src/commands/: act.rs  ask.rs  config.rs  credentials.rs  diag.rs  dictionary.rs  llm.rs  misc.rs  mod.rs  stt.rs
src-tauri/src/llm/: cloud.rs  mod.rs  openai.rs  prompt.rs
src-tauri/src/output/: clipboard.rs  keyboard.rs  mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/stt/: apple_speech.rs  cloud.rs  config.rs  gemini.rs  mod.rs  volcengine.rs  whisper_compat.rs
src/components/: ActHud.tsx  UpdatePrompt.tsx
src/hooks/: useActHudWindow.ts  useActTasks.ts  useAgentsWindowResize.ts  useCapsuleResize.ts  useDiagLog.ts  useRecording.ts  useTauriEvents.ts
src/lib/: api.ts  auth-client.ts  backup-settings.ts  capsuleError.ts  constants.ts  deep-link.ts  desktop-auth-callback.ts  tauri.ts
src/stores/: appStore.ts  authStore.ts
src/styles/: globals.css
tools/devlog-relay/: README.md  package-lock.json  package.json  server.mjs  smoke.mjs
(+85 files in other folders)
