[package]
name = "opentypeless"
version = "0.1.42"
description = "AI-powered speech-to-text and text polishing desktop app"
authors = ["OpenTypeless Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "opentypeless_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
enigo = "0.2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
async-trait = "0.1"
base64 = "0.22"
arboard = "3"
http = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
url = "2"
flate2 = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
# Act mode Windows accessibility backend (see src/act/windows.rs).
terminator-rs = "0.23"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
# Screen capture for Act's screen-aware plan modes (hybrid / vision), Windows
# only — xcap's Linux backend needs PipeWire/libspa, which we don't want to pull
# into non-Windows builds. Versions already appear in the tree via terminator.
xcap = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
block2 = "0.5"
objc2 = { version = "0.5", features = ["exception"] }
# Act mode macOS accessibility backend (see src/act/macos.rs).
# Raw AXUIElement* FFI. Uses `&str` attribute-name constants that we convert to
# CFString at call time; its CF ref types come from core-foundation-sys 0.8.
accessibility-sys = "0.1.3"
# CFString/CFArray/CFType wrappers + raw sys types for the AX tree. 0.9 shares
# core-foundation-sys 0.8 with accessibility-sys AND with core-graphics 0.23.
core-foundation = "0.9"
core-foundation-sys = "0.8"
# CGEvent (keyboard/mouse synthesis) + CGDisplay (screen capture). Pinned to 0.23
# so its transitive core-foundation is 0.9 (same major as ours above); the
# event/display call sites are identical to 0.24.
core-graphics = "0.23"
# PNG encoding for capture_screen (CGDisplayCreateImage → RGBA → PNG).
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native-sync-persistent", "crypto-rust"] }
libloading = "0.8"

[dev-dependencies]
plist = "1"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "thin"
strip = true
